[tool.poetry]
name = "nicovideo_api_client"
version = "0.4.0"
description = "ニコニコ動画 スナップショット検索APIv2の Python クライアント"
authors = ["Javakky <iemura.java@gmail.com>"]
homepage = "https://github.com/Javakky/NicoApiClient"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.0.0"
pytest = "^6.2.5"
Sphinx = "^4.2.0"
taskipy = "^1.8.2"
pyproject-flake8 = "^0.0.1-alpha.2"
install = "^1.3.4"
black = "^21.9b0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
example = "python examples/example.py"
test = "pytest tests"
docs = "sh script/make-docs.sh"
lint = "poetry run pflake8 nicovideo_api_client examples tests"
format = "poetry run black nicovideo_api_client examples tests"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,E402,"
max-complexity = 15

[tool.black]
line-length = 88
exclude = '''
(
    tests/v2/mocked_requests_get.py
    | nicovideo_api_client/api/v2/simple_filter.py
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
