[metadata]
name = nicovideo_api_client
version = 0.0.9
author = Javakky
author_email = iemura.java@gmail.com
description = ニコニコ動画 スナップショット検索APIv2の Python クライアント
url = https://github.com/Javakky/NicoApiClient
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages =
    nicovideo_api_client
    nicovideo_api_client.api.v2
install_requires =
    requests==2.26.0
    urllib3==1.26.6
